# autonomous_expedition

./: README.md
src/autonomous_stack/: CMakeLists.txt  package.xml
src/autonomous_stack/launch/: autonomous.launch.py
src/autonomous_stack/scripts/: cameraMatrix.pkl  controller.py  controller_continous.py  controller_new.py  controller_publish_once.py  direction_data.csv  dist.pkl  dummy_input.py  dummy_input_final.py  gps_data.csv  gps_path.html  imu_final_one.py  imu_input.py  imu_input_final.py  imu_input_slowed.py  imu_yaw_correct.py  input_first_rs.py  input_one_with_imperfect_arrow.py  input_one_with_perfect_arrow.py  input_two.py  input_with_dynamic_alignment.py  input_with_dynamic_alignment_rs.py  mainstack_controller.py  map.py  miscellaneous.py  multiprocessing._thing.py  new_controller_for_avoidance.py  new_controller_for_avoidance_once.py  new_controller_publishone.py  new_controller_with_straightpath.py  obstacle_avoidance.py  obstacle_avoidance_and_retracing.py  obstacle_avoidance_fix_orientation.py  obstacle_avoidance_new.py  without_euclidian.py
src/autonomous_stack/scripts/best_new_new/best/: data.pkl
src/autonomous_stack/scripts/best_new_new/best/.data/: serialization_id
src/autonomous_stack/scripts/best_new_new/best/data/: 0  1  10  100  102  103  104  105  106  108  109  110  111  112  114  115  116  117  118  12  120  121  122  123  124  126  127  128  129  13  130  132  133  134  135  136  138  139  14  140  (+254 more)
src/autonomous_stack/src/: obstacle_detection.cpp  pit_detection.cpp
